Tests for item level versioning of KNIME URIs. Add an exception when manipulating URIs with multi-valued query parameters.